--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,10 @@
 :root {
-  --background: #141414;
-  --font: #FFFFFF;
-  --secondary-font:  #585858;
-  --tertiary-font:  #B7B7B7;
-  --placeholder: #434343;
-  --surface: #181818;
-  --purple: #A966FF;
-  --success: #00FF75;
-  --warning: #FFD600;
   --border-radius: 12px;
   --font: "Inter", sans-serif;
   --article-font: "Lato", sans-serif;
   --article-heading: "Playfair Display", serif;
   --font-headings: "Inter", sans-serif;
-  --font-mono: "IBM Plex Mono", ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-mono: "IBM Plex Mono", monospace;
 }
 
 * {
