--- a/src/lib/Article.css
+++ b/src/lib/Article.css
@@ -31,7 +31,6 @@ article h3 {
 }
 
 article p, article i, article a, article li {
-  margin-top: 21px;
   font-family: var(--font);
   font-size: 21px;
   letter-spacing: -0.03px;
@@ -98,8 +97,7 @@ article p a {
 }
 
 article ul, article ol {
-  padding: 0;
-  margin: 0;
+  padding-left: 21px;
 }
 
 article li {
